<resources>
    <string name="app_name">Salehni</string>
    <string name="welcome_to">welcome to</string>
    <string name="fix_any_time_anywhere">fix anytime any where</string>
    <string name="choose_language">choose a language</string>
    <string name="language_ar">العربية</string>
    <string name="language_en">English</string>
    <string name="you_can_change_at_any_time">you can change at any time</string>
    <string name="all_right_reserved">© 2020 All Rights reserved</string>
    <string name="sign_in">Sign in</string>
    <string name="jo_num">+962</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_role">User Role</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="personal_info">Personal Info.</string>
    <string name="fname_lname">First Name, Last Name</string>
    <string name="ph_no">0798809109</string>
    <string name="email">Email</string>
    <string name="dob">Date of birh</string>
    <string name="confrim_pass">Confirm password</string>
    <string name="accept_our">Accept our</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="verfiy">Verify</string>
    <string name="verify_account">Verify Your Account</string>
    <string name="code_recived">Enter the code that you recivied</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="send_request">Send Request</string>
    <string name="fix_at_your_location">Fix at your location</string>
    <string name="fix_at_mechanic_location">Fix at Mechanic\'s location</string>
    <string name="breaks_change">Breaks Change</string>
    <string name="spark_plugs">Spark Plugs</string>
    <string name="clean_injection">Cleaning Injection</string>
    <string name="flat_tire">Flat Tire</string>
    <string name="battery_charge">Battery Charge</string>
    <string name="oil_change">Oil Change</string>
    <string name="air_filter_change">Air Filter Change</string>
    <string name="air_condition_gaz">Air Condition Gaz</string>
    <string name="or">OR</string>
    <string name="custom_request">Custom Request</string>
    <string name="take_images">Take images</string>
    <string name="images3">3 images</string>
    <string name="take_video">Take a video</string>
    <string name="video1">1 video |</string>
    <string name="retake"><u>Retake</u></string>
    <string name="send_location">Send your location</string>
    <string name="amman_jordan">Amman,Jordan- Mecca St.</string>
    <string name="send_notes">Send any other notes</string>
    <string name="you_choose">You choose</string>
    <string name="items_4">4 items</string>
    <string name="provider">Provider</string>
    <string name="total_price">Total Price</string>
    <string name="items">items</string>
    <string name="details">Details</string>
    <string name="autohub">autohub</string>
    <string name="jd_50">50 JD</string>
    <string name="request">Request</string>
    <string name="custome_resquest">Custom Request</string>
    <string name="am_11_30">11:30 am</string>
    <string name="request_details">Your Request Offers Detail</string>
    <string name="working_days">Working Days</string>
    <string name="final_solution">الحل النهائي</string>
    <string name="num100">100</string>
    <string name="jd">JD</string>
    <string name="days3">3 days</string>
    <string name="notes">Notes</string>
    <string name="etc">etcetetetetetetetetetetetetetetetetetetetetetetetetetetetetetetetet</string>
    <string name="voice_note">Voice Note</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item1">Item 1</string>
    <string name="total">Total</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="num65">65 JD</string>
    <string name="driver_name">Driver Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="call">Call</string>
    <string name="driver1">Driver Name1</string>
    <string name="numb079">079xxxxxxx</string>
    <string name="my_request">My Request</string>
    <string name="request_offers">Request Offers</string>
    <string name="winches_list">Winches List</string>
    <string name="mechanic_name">Mechanic Name</string>
    <string name="send_offer">Send you an offer about you request</string>
    <string name="notification">Notifications</string>
    <string name="ahmad_abuhussein">Ahmad Abuhussein</string>
    <string name="send_custom_request">Send you a custom request</string>
    <string name="images">Images |</string>
    <string name="images.">images</string>
    <string name="images2">Images</string>
    <string name="watch"><u>Watch</u></string>
    <string name="video">Video |</string>
    <string name="write_offer">Write your offer</string>
    <string name="write_your_offer">Write Your Offer</string>
    <string name="person_name">Person Name</string>
    <string name="request11111">Request 111</string>
    <string name="price_here">Price Here</string>
    <string name="send_voice_note">Send voice note</string>
    <string name="send_your_offer">Send your offer</string>
    <string name="sound">Sound 00:30 |1|</string>
    <string name="listen"><u>Listen</u></string>
    <string name="clock">00:01</string>
    <string name="clock1">00:30</string>
    <string name="You_have_an_account_login.">You have an account?</string>
    <string name="my_prof">My Profile</string>
    <string name="privacy_policy">Privacy and Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="ahmadabuhussein">Ahmad Abuhussein</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="areyousureyouwanttologout">Are you sure you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="terms_condition_text">Welcome to Salehni!

These terms and conditions outline the rules and regulations for the use of Salehni application.

By accessing this application we assume you accept these terms and conditions. Do not continue to use Salehni if you do not agree to take all of the terms and conditions stated on this page.

The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: “Client”, “You” and “Your” refers to you, the person log on this application and compliant to the Company\'s terms and conditions. “The Company”, “Ourselves”, “We”, “Our” and “Us”, refers to our Company. “Party”, “Parties”, or “Us”, refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client\'s needs in respect of provision of the Company\'s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</string>

    <string name="send">send</string>
    <string name="servererror">Server Error</string>
    <string name="validationInternetConnection">Validation Internet Connection</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="enter_your_ps">Enter Your Password</string>
    <string name="confrim_ps">Confirm Your Password</string>
    <string name="password_more_than_4">Password must be more than 4 characters</string>

    <string name="searchForCountry">Search for country</string>
    <string name="check_privacy_and_policy">Please check privacy and policy</string>
    <string name="reset_code"><u>reset code</u></string>
    <string name="otp_code">Code is Invalid</string>
    <string name="loginWrong">Please check your mobile or password!</string>
    <string name="selectyourphoto">Select your photo</string>
    <string name="opencamera">Open Camera</string>
    <string name="choosefromgallery">Choose from gallery</string>
    <string name="images0">0 image</string>
    <string name="video0">0 video</string>
    <string name="remove">remove</string>
    <string name="close">close</string>
    <string name="clickAgainToExit">Click again to exit!</string>
    <string name="thank_you">Thank You</string>
    <string name="acceptance">Your Acceptance has been recevied</string>
    <string name="by_car">Going by Car</string>
    <string name="accepted_offer">Accepted Offer</string>
    <string name="user_request_details">User Request Details</string>
    <string name="enter_price">Enter Your Price</string>
    <string name="time0">00:00</string>
    <string name="max_1_minute">You have maximum 1 minute to record</string>
    <string name="sound1">Sound </string>


    <string name="google_maps_key">AIzaSyCGUIbbpn9AOgjaGw7IL0PHNW6vX0iW9q0</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="chat">Chat</string>
    <string name="today">Today</string>
    <string name="person_talking_to">Person who is talking to</string>
    <string name="type_text_here">Type Text here…</string>
    <string name="sending_link">We will send you a link below email to reset your password</string>
    <string name="remember_password">if you remember your password,</string>
    <string name="forget_password1">Forget Password</string>


</resources>