<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_45sdp"
        android:src="@drawable/language_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/choose_language"
        android:textColor="@color/text_on_white_bg"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/you_can_change_at_any_time"
        android:textColor="#767676"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/circle_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@color/text_on_white_bg"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:background="@drawable/shape_btn_red_bg"
                android:text="@string/language_ar"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/en_Btn"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_btn_white_bg"
                android:text="@string/language_en"
                android:textColor="@color/text_on_white_bg" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/all_right_reserved"
            android:textColor="@color/text_on_black_bg" />
    </RelativeLayout>

</LinearLayout>