<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:background="@drawable/circle_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/text_on_white_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_choose"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/items_4"
                    android:textColor="@color/links_and_buttons"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@color/links_and_buttons"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:weightSum="100"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:text="@string/provider"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/total_price"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:text="@string/items"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:text="@string/details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_right_reserved"
                    android:textColor="@color/text_on_black_bg"
                    android:gravity="center_horizontal"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>