<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:background="@drawable/circle_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_details"
                android:layout_marginTop="@dimen/_30sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:layout_gravity="center" />


        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/text_on_white_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="@color/links_and_buttons"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:text="@string/provider"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/total_price"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="center"
                    android:text="@string/working_days"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carParts_Rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_11sdp"
                android:gravity="center_horizontal"
                android:text="@string/all_right_reserved"
                android:textColor="@color/text_on_black_bg" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>