<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:background="@drawable/circle_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/text_on_white_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/fix_at_your_location"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9ssp"
                    app:buttonTint="@color/text_on_black_bg" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/fix_at_mechanic_location"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9ssp"
                    app:buttonTint="@color/text_on_black_bg" />
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_no_corners">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/images" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/take_images"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/images3"
                    android:textColor="@color/text_on_black_bg"
                    android:textSize="@dimen/_7ssp" />


            </FrameLayout>


            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_no_corners">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/video" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/take_video"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video1"
                        android:textColor="@color/text_on_black_bg"
                        android:textSize="@dimen/_7ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/retake"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_7ssp" />


                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/shape_no_corners"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/send_location"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amman_jordan"
                android:textColor="@color/text_on_black_bg"
                android:textSize="@dimen/_8ssp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_no_corners"
                android:gravity="top"
                android:hint="@string/send_notes"
                android:minLines="4"
                android:paddingLeft="@dimen/_5sdp"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/shape_btn_red_bg"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:background="@drawable/send_request_white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/send_request"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/all_right_reserved"
                android:textColor="@color/text_on_black_bg" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>